--- a/INDEX.html
+++ b/INDEX.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My 1st Ever Github Github Repo</title>
+    <title>My 1st Ever Github</title>
 </head>
 <body>
     
